--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
                 <input class="uP" type="text" placeholder="Username">
                 <br>            
                 <input class="uP" type="password" placeholder="Password">
-                <br>  
-                <input class="button" type="submit" value="Sign in">
+                <br> 
+                <a href="takeoff.html" class="link">Sign in</a> 
+               
         </div>
     </div>
     
