--- a/takeoff.html
+++ b/takeoff.html
@@ -8,6 +8,6 @@
     <title>Take Off</title>
 </head>
 <body>
-    
+    <!-- No modifications within the body tag intended, just a page with a picture from the "cssTake.css" page. -->
 </body>
 </html>
